--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -3,3 +3,7 @@ pandas==1.4.4
 requests==2.28.1
 google-api-python-client==2.61.0
 aiogoogle==4.3.0
+seaborn==0.12.1
+tensorflow==2.10.0
+transformers==4.23.1
+spacy==3.4.2
